--- a/release-notes.html
+++ b/release-notes.html
@@ -5,16 +5,22 @@
 </head>
 <body>
 
-<li> <u>1.39n, 21 December 2007</u>
+<li> <u>1.39o, 7 January 2008</u>
 <ul>
+<li> <i>Image&gt;Stacks&gt;Z project</i> works with HyperStacks.
 <li> Custom channel LUTs are saved in the TIFF header.
+<li> Added the "Copy Column Headers" option to <i>Edit&gt;Options&gt;Input/Output</i>.
 <li> The <i>Image&gt;Adjust&gt;Brightness/Contrast</i> "Auto" option no longer deletes the selection.
-<li> The radius used by the <i>Median</i>, <i>Mean</i>, <i>Minimum</i>, <i>Maximum</i> and <i>Variance</i> filters
-is not longer limited to 100 pixels.
-<li> Increased the width of the "Maximum Memory" field in <i>Edit&gt;Options&gt;Memory</i>
+<li> Image windows open at the top of the screen on systems that have a screen 
+height of 600 pixels or less (e.g., the Eee PC).
+<li>  Increased the maximum radius in Median, Mean, Minimum, Maximum and 
+Variance filters from 100 to 1000 pixels.
+<li> Increased the width of the "Maximum Memory" field in <i>Edit&gt;Options&gt;Memory & Threads</i>
 from 4 to 5 digits to allow easy entry of values greater than 9999 (9.8GB).
 <li> Removed the System.gc() call, which sometimes 
 caused long pauses when closing images, from ImagePlus.flush().
+<li> Fixed a bug that could cause a bogus "Selection required" message when closing the Results
+window or using the <i>Analyze&gt;Clear Results</i> command.
 </ul>
 
 </body>
