--- a/release-notes.html
+++ b/release-notes.html
@@ -5,26 +5,20 @@
 </head>
 <body>
 
-<li> <u>1.40b, 28 March 2008</u>
+<li> <u>1.40c, 2 April 2008</u>
 <ul>
-<li> Added the <i>Image&gt;HyperStacks&gt;Reduce Dimensionality</i> command, 
-based on Jerome Mutterer's
-<a href="http://rsb.info.nih.gov/ij/macros/Reduce_HyperStack.txt">Reduce HyperStack</a>
-macro.
-<li> Thanks to Alden Dima, added the "Count Mask" option to the
-particle analyzer, which generates masks filled with a pixel value
-corresponding to the particle count.
-<li> Removed the <i>Image&gt;HyperStacks&gt;Split Channels</i> command. Instead,
-use <i>Image&gt;Color&gt;RGB Split</i>.
-<li> The <i>Image&gt;Color&gt;RGB Split</i> command, when working
-with composite images, is faster and uses less memory, and it no longer
-displays a dialog box.
-<li> Added the setMetadata("Info", string), getMetadata("Info"), 
-setMetadata("Label", string) and getMetadata("Label") macro functions. 
-<li> Fixed a bug, introduced in v1.39s, that could cause ImageJ to 
-deadlock (hang) when opening a dialog box, especially on Java 1.5.0.
-<li> Fixed a bug that caused some 48-bit interleaved RGB TIFFs to
-not display correctly.
+<li> <i>Image&gt;Stacks&gt;Z Project</i> now works with t-series HyperStacks.
+<li> <i>Image&gt;HyperStacks&gt;Stack to HyperStack </i> will
+now convert an Image5D to a HyperStack.
+<li> Added the <i>File&gt;Open Samples&gt;Organ of Corti</i>
+sample HyperStack, courtesy of Glen MacDonald.
+<li> Added the Stack.swap(n1,n2) macro function.
+<li> Fixed a bug, introduced in v1.40b, that caused decimal points to be 
+replaced with commas on European systems.
+<li> Fixed a bug that caused stack slice labels after the first null
+label to not be saved.
+<li> Fixed a bug that made it impossible to open the Channels window after 
+it had been closed by WindowManager.closeAllWindows().
 </ul>
 
 </body>
